# litmus

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/litmus/: __init__.py  cli.py  model.py  parsing.py  report.py  results.py  runner.py  scoring.py
src/litmus/tasks/: __init__.py  _base.py  _framing.py  _loader.py  calm.py  moleculeace.py  peer.py
tests/: test_parsing.py  test_results.py  test_scoring.py  test_tasks.py
